--- a/package.json
+++ b/package.json
@@ -63,12 +63,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^17.0.1",
-    "react-alice-carousel": "^2.0.2",
     "react-app-polyfill": "^1.0.6",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-editor": "^1.4.0",
-    "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.1.1",
@@ -86,8 +81,7 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "yup": "^0.29.3"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"node scripts/start.js\" ",
@@ -117,8 +111,6 @@
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-react-apollo": "2.0.7",
-    "@types/classnames": "^2.2.11",
-    "@types/reactstrap": "^8.5.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
