--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "graphql-jwt-auth",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@babel/core": "7.9.0",
@@ -70,6 +69,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-text-loop": "^2.3.0",
+    "react-scripts": "4.0.3",
     "resolve-url-loader": "3.1.1",
     "save-dev": "0.0.1-security",
     "subscriptions-transport-ws": "^0.9.18",
@@ -81,14 +81,16 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"node scripts/start.js\" ",
     "start-wsl": "concurrently \"sudo service mongodb start\" \"npm run server\" \"node scripts/start.js\" ",
-    "server": "nodemon backend/index.js",
+    "server": "ts-node-dev --respawn --transpile-only backend/index.ts",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+     "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -111,6 +113,10 @@
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-react-apollo": "2.0.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/graphql-iso-date": "^3.4.0",
+    "@types/mongoose": "^5.10.4",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
