--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "allowJs": true,
+    "jsx": "react",
     "module": "commonjs",
     "lib": [
       "dom",
@@ -32,6 +33,6 @@
     "node_modules"
   ],
   "include": [
-    "frontend/**/*.tsx"
+    "frontend",
   ]
 }
