--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "express-graphql": "^0.11.0",
     "file-loader": "^6.2.0",
+    "graphql": "^15.5.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^6.2.3",
     "helmet": "^4.0.0",
@@ -68,21 +69,23 @@
     "react-loading-skeleton": "^2.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-text-loop": "^2.3.0",
     "react-scripts": "4.0.3",
+    "react-text-loop": "^2.3.0",
     "resolve-url-loader": "3.1.1",
     "save-dev": "0.0.1-security",
     "subscriptions-transport-ws": "^0.9.18",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.31",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
+    "web-vitals": "^1.0.1",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "web-vitals": "^1.0.1"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"node scripts/start.js\" ",
@@ -90,7 +93,7 @@
     "server": "ts-node-dev --respawn --transpile-only backend/index.ts",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-     "eject": "react-scripts eject",
+    "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
