--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "apollo-link-error": "^1.1.13",
@@ -26,6 +27,7 @@
     "bootstrap": "^5.0.0-alpha1",
     "browserslist": "^4.16.3",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
