--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "react-text-loop": "^2.3.0",
     "resolve-url-loader": "3.1.1",
     "save-dev": "0.0.1-security",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "subscriptions-transport-ws": "^0.9.18",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
