--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
+    "validator": "^13.5.2",
     "web-vitals": "^1.0.1",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
