--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "allowJs": true,
     "jsx": "react",
+    "strict": true,
     "module": "commonjs",
     "lib": [
       "dom",
