--- a/package.json
+++ b/package.json
@@ -15,6 +15,19 @@
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@graphql-codegen/cli": "1.18.0",
+    "@graphql-codegen/typescript": "1.17.11",
+    "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "2.0.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/classnames": "^2.2.11",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/graphql-iso-date": "^3.4.0",
+    "@types/mongoose": "^5.10.4",
+    "autoprefixer": "^10.2.5",
     "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.3.2",
     "apollo-server-express": "^2.16.1",
@@ -30,6 +43,8 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "classnames": "^2.2.6",
+    "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -56,15 +71,20 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.10.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
+    "postcss": "^8.2.8",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "postcss-scss": "^3.0.5",
+    "postcss-cli": "^8.3.1",
+    "prettier": "2.1.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
@@ -75,13 +95,17 @@
     "react-scripts": "4.0.3",
     "react-text-loop": "^2.3.0",
     "resolve-url-loader": "3.1.1",
+    "sass-loader": "^8.0.2",
     "save-dev": "0.0.1-security",
     "subscriptions-transport-ws": "^0.9.18",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.0.3",
+    "tailwindcss": "^2.0.4",
+    "twin.macro": "^2.3.1",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
     "validator": "^13.5.2",
@@ -121,30 +145,6 @@
     ]
   },
   "devDependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@graphql-codegen/cli": "1.18.0",
-    "@graphql-codegen/typescript": "1.17.11",
-    "@graphql-codegen/typescript-operations": "1.17.8",
-    "@graphql-codegen/typescript-react-apollo": "2.0.7",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/classnames": "^2.2.11",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/graphql-iso-date": "^3.4.0",
-    "@types/mongoose": "^5.10.4",
-    "autoprefixer": "^10.2.5",
-    "classnames": "^2.2.6",
-    "css-loader": "^3.4.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "postcss": "^8.2.8",
-    "postcss-cli": "^8.3.1",
-    "prettier": "2.1.2",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^0.23.1",
-    "tailwindcss": "^2.0.4",
-    "twin.macro": "^2.3.1"
   },
   "jest": {
     "roots": [
